# dendrite

./: .gitignore  README.md  vercel.json
backend/: .env.example  Dockerfile  __init__.py  main.py  pyproject.toml  render.yaml  requirements.txt
backend/agents/: __init__.py  assessment.py  critic.py  engagement.py  guardrail.py  manager_insights.py  meta_learning.py  orchestrator.py  path_curator.py  plan_generator.py  skill_decay.py
backend/core/: __init__.py  config.py  foundry_client.py  logging.py  mirl.py
backend/models/: __init__.py  schemas.py
backend/routers/: assessment.py  chat.py  manager.py  system.py
backend/services/: __init__.py  fabric_iq.py  foundry_iq.py  mcp_learn.py  work_iq_sim.py
data/synthetic/: certifications.json  learners.json  work-signals.json
docs/: ARCHITECTURE.md  AZURE_SETUP.md  SUPABASE_SCHEMA.sql
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AgentTrace.tsx  BYOKModal.tsx  ChatPanel.tsx  MIRLDistribution.tsx  NeuralBackground.tsx  ReadinessGauge.tsx  RiskRadar.tsx  Sidebar.tsx  WeaknessRadar.tsx
frontend/src/lib/: api.ts  store.ts  utils.ts
frontend/src/pages/: Landing.tsx  Learner.tsx  Manager.tsx  SystemHealth.tsx
frontend/src/styles/: index.css
knowledge/: engineering-certification-guide.md  team-learning-report.md  workload-insights-report.md
