[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dendrite"
version = "1.0.0"
description = "Cognitive Nervous System for Enterprise Learning — 10-agent reasoning system on Microsoft Foundry"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.9.2",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
    "openai==1.55.3",
    "azure-identity==1.19.0",
    "azure-search-documents==11.5.2",
    "agent-framework==0.1.0b251104",
    "tenacity==9.0.0",
    "supabase==2.10.0",
    "orjson==3.10.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]
